Terraform_Session_April/session3/SG.tf
resource "aws_security_group" "session3_SG" {
  name        = "Web"
  description = "This is a web sg"
  ingress {
    description = "This is ingress for the http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "This is ingress for the http"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "first_sg"
  }
}
